--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-"url": "https://tr300.vercel.app/",
-"name": "TR300",
-"iconUrl": "https://raw.githubusercontent.com/Draysongz/tr300/main/public/logo.png"
+"url": "https://tswap-sigma.vercel.app/",
+"name": "TSWAP",
+"iconUrl": "https://raw.githubusercontent.com/skalez-a/tswap/master/public/tcandy.jpg"
 }
