--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tonconnect/ui-react": "^2.0.2",
     "axios": "^1.6.8",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.473.0",
     "next": "^15.0.4",
     "react": "^18",
     "react-dom": "^18",
